Closed
Bug 1952396
Opened 1 year ago
Closed 1 year ago
Debug-only logging tab-crash in getUserMedia playback with MOZ_LOG=MediaManager:5
Categories
(Core :: WebRTC: Audio/Video, defect, P2)
Core
WebRTC: Audio/Video
Tracking
()
VERIFIED
FIXED
140 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox136 | --- | wontfix |
| firefox137 | --- | wontfix |
| firefox138 | --- | wontfix |
| firefox139 | --- | wontfix |
| firefox140 | --- | verified |
People
(Reporter: jib, Assigned: jib)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR:
- In about:logging, set Log Modules to "MediaManager:5"
- Open https://jan-ivar.github.io/dummy/gum_video.html
Expected result:
- camera self view video playing
Actual result:
[50028] Assertion failure: mIsValid (Invalid checked integer (division by zero or integer overflow)), at /Users/jan-ivar/moz/mozilla-unified/obj-aarch64-apple-darwin23.6.0-debug/dist/include/mozilla/CheckedInt.h:562
#01: mozilla::CheckedInt<long long>::value() const[/Users/jan-ivar/moz/mozilla-unified/obj-aarch64-apple-darwin23.6.0-debug/dist/NightlyDebug.app/Contents/MacOS/XUL +0x13e0474]
#02: mozilla::media::TimeUnit::ToCommonUnit(long long) const[/Users/jan-ivar/moz/mozilla-unified/obj-aarch64-apple-darwin23.6.0-debug/dist/NightlyDebug.app/Contents/MacOS/XUL +0x84ece58]
#03: mozilla::media::TimeUnit::ToMicroseconds() const[/Users/jan-ivar/moz/mozilla-unified/obj-aarch64-apple-darwin23.6.0-debug/dist/NightlyDebug.app/Contents/MacOS/XUL +0x84ed010]
#04: mozilla::MediaEngineRemoteVideoSource::DeliverFrame(unsigned char*, mozilla::camera::VideoFrameProperties const&)[/Users/jan-ivar/moz/mozilla-unified/obj-aarch64-apple-darwin23.6.0-debug/dist/NightlyDebug.app/Contents/MacOS/XUL +0x8f97024]
#05: mozilla::camera::CamerasChild::RecvDeliverFrame(int const&, mozilla::ipc::Shmem&&, mozilla::camera::VideoFrameProperties const&)[/Users/jan-ivar/moz/mozilla-unified/obj-aarch64-apple-darwin23.6.0-debug/dist/NightlyDebug.app/Contents/MacOS/XUL +0x8c94eac]
| Assignee | ||
Comment 1•1 year ago
|
||
Comment 2•1 year ago
|
||
Set release status flags based on info from the regressing bug 1908245
status-firefox136:
--- → affected
status-firefox137:
--- → affected
status-firefox138:
--- → affected
status-firefox-esr128:
--- → unaffected
| Assignee | ||
Updated•1 year ago
|
Summary: Debug-only logging crash in getUserMedia playback with MOZ_LOG=MediaManager:5 → Debug-only logging tab-crash in getUserMedia playback with MOZ_LOG=MediaManager:5
Updated•1 year ago
|
Updated•1 year ago
|
Updated•1 year ago
|
Attachment #9470405 -
Attachment description: Bug 1952396 - avoid logging crash with MOZ_LOG=MediaManager:5 and camera playback in debug build. → Bug 1952396 - Remove processingDuration from local camera videoframes. r?pehrsons
Updated•1 year ago
|
Pushed by jbruaroey@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ab6f21d57db1
Remove processingDuration from local camera videoframes. r=webrtc-reviewers,ng,pehrsons
Comment 4•1 year ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 1 year ago
status-firefox140:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 140 Branch
Comment 5•1 year ago
|
||
The patch landed in nightly and beta is affected.
:jib, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- See https://wiki.mozilla.org/Release_Management/Requesting_an_Uplift for documentation on how to request an uplift.
- If no, please set
status-firefox139towontfix.
For more information, please visit BugBot documentation.
Flags: needinfo?(jib)
Updated•1 year ago
|
Flags: needinfo?(jib)
Updated•1 year ago
|
QA Whiteboard: [qa-triage-done-c141/b140] [qa-verif-needed-c141/b140]
Flags: qe-verify+
Updated•1 year ago
|
QA Whiteboard: [qa-triage-done-c141/b140] [qa-verif-needed-c141/b140] → [qa-triage-done-c141/b140] [qa-ver-needed-c141/b140]
Updated•1 year ago
|
QA Contact: mchiorean
Comment 6•1 year ago
|
||
I am not able to reproduce the issue on Win11/Ubuntu 24.04 using Firefox builds 137.0 and 138.0 and steps from description, for me the camera always opens without errors.
Jan-Ivar, is there something that I am missing? I need to reproduce the issue in order to confirm the fix. Thank you.
Flags: needinfo?(jib)
Comment 8•1 year ago
•
|
||
I was able to reproduce the issue on Win11x64 using Firefox build 138.0a1 debug build, tab crashed.
Verified that on Win11x64 using Firefox debug build 140.0b5 the camera opens.
Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triage-done-c141/b140] [qa-ver-needed-c141/b140] → [qa-triage-done-c141/b140] [qa-ver-done-c141/b140]
Flags: qe-verify+
You need to log in
before you can comment on or make changes to this bug.
Description
•