Bug 1952396 - Remove processingDuration from local camera videoframes. r=webrtc-reviewers,ng,pehrsons

This avoids camera playback logging crashes with MOZ_LOG=MediaManager:5 in debug builds,
since Processing duration is currently only set by decoders.

Differential Revision: https://phabricator.services.mozilla.com/D240701